[package]
name = "covclaim"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
diesel = { version = "2.1.5", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.21"
zeromq = { version = "0.3.5", features = ["tokio", "tcp-transport"] }
reqwest = { version = "0.11.27", features = ["json"] }
serde_json = "1.0.116"
base64 = "0.22.0"
serde = { version = "1.0.198", features = ["derive"] }
elements = { git = "https://github.com/michael1011/rust-elements", branch = "master", features = ["serde"] }
tower-http = { version = "0.5.2", features = ["cors"] }
hex = { version = "0.4.3", features = ["alloc", "serde", "std"] }
serde_with = "3.7.0"
crossbeam-channel = "0.5.12"
r2d2 = "0.8.10"
rayon = "1.10.0"
num_cpus = "1.16.0"

[build-dependencies]
built = { version = "0.7.2", features = ["git2"] }
